Le di formato al código de las pantallas

--- a/system_huellitas/views/admin/dashboard.html
+++ b/system_huellitas/views/admin/dashboard.html
@@ -44,13 +44,13 @@
                                 </form>
                                 <table class="table align-middle mt-2">
                                     <thead class="table">
-                                    <tr>
-                                        <td colspan="3" id="rowsFound" hidden></td>
-                                    </tr>
-                                    <tr>
-                                        <th hidden>Imagen</th>
-                                        <th hidden>Nombre</th>
-                                    </tr>
+                                        <tr>
+                                            <td colspan="3" id="rowsFound" hidden></td>
+                                        </tr>
+                                        <tr>
+                                            <th hidden>Imagen</th>
+                                            <th hidden>Nombre</th>
+                                        </tr>
                                     </thead>
                                     <tbody id="tableBody"></tbody>
                                 </table>
@@ -137,7 +137,8 @@
                             </div>
                         </div>
                     </div>
-                    <p class="text d-flex align-items-center justify-content-center fw-bold text-light" id="newUsers"></p>
+                    <p class="text d-flex align-items-center justify-content-center fw-bold text-light" id="newUsers">
+                    </p>
                 </div>
                 <!-- Col 2 -->
                 <div class="col-md-4 col-lg-4 col-sm-12 bg-orange-color rounded-4 mx-5 shadow p-3 rounded-4">
@@ -150,7 +151,8 @@
                         <img src="../../resources/img/svg/line.svg" alt="">
                         <p class=" fs-5 fw-semibold text-light" id="nameTopProduct"></p>
                         <!--Si no esxisten productos, entonces se mostrara este mensaje-->
-                        <p class=" fs-5 fw-semibold text-light text-center d-none" id="withoutProducts">Aún no has tenido pedidos en Huellitas Pet's</p>
+                        <p class=" fs-5 fw-semibold text-light text-center d-none" id="withoutProducts">Aún no has
+                            tenido pedidos en Huellitas Pet's</p>
                     </div>
                 </div>
                 <!-- Col 3 -->
@@ -159,8 +161,8 @@
                         <img class="me-3" src="../../resources/img/svg/edit.svg" alt="">
                         <span class="fw-semibold text-light fs-4">Categorías</span>
                         <!-- Con d-none d-lg-block el boton no se vera en pantallas pequeñas -->
-                        <a href="../../views/admin/scrud_categorias.html"
-                            id="btnCategory" class="btn btn-light text-orange-color p-2 rounded-5 mx-3">Ver más</a>
+                        <a href="../../views/admin/scrud_categorias.html" id="btnCategory"
+                            class="btn btn-light text-orange-color p-2 rounded-5 mx-3">Ver más</a>
                     </div>
                     <!-- Lista de categorías -->
                     <div class="third_col">
