--- a/system_huellitas/views/admin/scrud_admin.html
+++ b/system_huellitas/views/admin/scrud_admin.html
@@ -105,11 +105,12 @@
                             <div class="container text-center text-md-start text-lg-start">
                                 <div class="row align-items-center gy-3 justify-content-center text-center">
                                     <div class="col-sm-12 col-md-auto">
-                                        <img class="rounded-circle" id="imagen" src="../../resources/img/png/rectangulo.png"
-                                            width="130px" height="130px">
+                                        <img class="rounded-circle" id="imagen"
+                                            src="../../resources/img/png/rectangulo.png" width="130px" height="130px">
                                         <div class="mt-2">
                                             <!-- Botón para cargar imagen -->
-                                            <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden>
+                                            <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin"
+                                                hidden>
                                             <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
                                             <label class="btn btn-red-color text-light btn-sm" for="imgAdmin">Cargar
                                                 imagen</label>
@@ -130,20 +131,22 @@
                                             <label for="correoAdmin" class="form-label fw-semibold">Correo
                                                 electrónico</label>
                                             <input type="email" class="form-control" id="correoAdmin"
-                                                   placeholder="admin@gmail.com" name="correoAdmin" required>
+                                                placeholder="admin@gmail.com" name="correoAdmin" required>
                                         </div>
                                         <div class="mb-3">
                                             <label for="claveadmin" class="form-label fw-semibold">Contraseña</label>
-                                            <input type="password" class="form-control" id="claveAdmin" placeholder="Escribe la constraseña"
-                                                name="claveAdmin" pattern="(?=.*\d)(?=.*[A-Z]).{8,}"
-                                                   title="Debe contener al menos un número, una mayúscula y ocho caracteres o más." required>
+                                            <input type="password" class="form-control" id="claveAdmin"
+                                                placeholder="Escribe la constraseña" name="claveAdmin"
+                                                pattern="(?=.*\d)(?=.*[A-Z]).{8,}"
+                                                title="Debe contener al menos un número, una mayúscula y ocho caracteres o más."
+                                                required>
                                         </div>
                                     </div>
                                     <div class="col-sm-12 col-md-6 col-lg-6">
                                         <div class="mb-3">
                                             <label for="apellidoAdmin" class="form-label fw-semibold">Apellido</label>
                                             <input type="text" class="form-control" id="apellidoAdmin"
-                                                   name="apellidoAdmin" placeholder="Castro Alemán" required>
+                                                name="apellidoAdmin" placeholder="Castro Alemán" required>
                                         </div>
                                         <div class="mb-3">
                                             <label for="aliasAdmin" class="form-label fw-semibold">Alías</label>
@@ -154,7 +157,8 @@
                                             <label for="confirmarClave" class="form-label fw-semibold">Confirmar
                                                 contraseña</label>
                                             <input type="password" class="form-control" id="confirmarClave"
-                                                name="confirmarClave" placeholder="Confirma nuevamente la contraseña" required>
+                                                name="confirmarClave" placeholder="Confirma nuevamente la contraseña"
+                                                required>
                                         </div>
                                     </div>
                                 </div>
@@ -202,7 +206,8 @@
                                     </div>
                                 </div>
                                 <div class="container text-center mb-2 mt-4">
-                                    <button type="submit" class="btn btn-orange-color text-light me-3" name="btnGuardar">Guardar</button>
+                                    <button type="submit" class="btn btn-orange-color text-light me-3"
+                                        name="btnGuardar">Guardar</button>
                                     <button type="reset" class="btn btn-red-color text-light"
                                         name="btnCancelar">Cancelar</button>
                                 </div>
