--- a/system_huellitas/views/admin/scrud_clientes.html
+++ b/system_huellitas/views/admin/scrud_clientes.html
@@ -168,7 +168,8 @@
                                             <option>Activo</option>
                                             <option>Inactivo</option>
                                         </select>
-                                        <div class="form-text mt-2" id="basic-addon4">Recuerda que puedes cambiar el estado de este cliente</div>
+                                        <div class="form-text mt-2" id="basic-addon4">Recuerda que puedes cambiar el
+                                            estado de este cliente</div>
                                     </div>
                                     <div class="col-6">
                                         <button type="submit" class="btn btn-red-color text-light me-3"
