--- a/system_huellitas/views/admin/scrud_comentarios.html
+++ b/system_huellitas/views/admin/scrud_comentarios.html
@@ -96,28 +96,28 @@
                             <div class="row">
                                 <div class="col-12 col-sm-4">
                                     <div class="container d-flex align-items-center justify-content-center">
-                                        <img src="../../resources/img/png/ejemplo_producto.png" id="imagen" class="tamanio_imagen_agregar" width="180px" height="180px">
+                                        <img src="../../resources/img/png/ejemplo_producto.png" id="imagen"
+                                            class="tamanio_imagen_agregar" width="180px" height="180px">
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-4 pb-4">
                                     <div>
                                         <!-- Campos para nombre del producto y cliente -->
-                                        <label class="fs-8 btn-orange-color fw-semibold"
-                                            for="nombreProductoValoracion">
+                                        <label class="fs-8 btn-orange-color fw-semibold" for="nombreProductoValoracion">
                                             Producto</label>
-                                        <textarea class="form-control" id="nombreProductoValoracion" name="nombreProductoValoracion"
-                                                rows="3" disabled></textarea>
+                                        <textarea class="form-control" id="nombreProductoValoracion"
+                                            name="nombreProductoValoracion" rows="3" disabled></textarea>
                                     </div>
                                     <br>
                                     <div>
-                                        <label class="fs-8 btn-orange-color fw-semibold"
-                                            for="nombreClienteValoracion">
+                                        <label class="fs-8 btn-orange-color fw-semibold" for="nombreClienteValoracion">
                                             Cliente</label>
-                                        <textarea class="form-control" id="nombreClienteValoracion" name="nombreClienteValoracion"
-                                                rows="2" disabled></textarea>
+                                        <textarea class="form-control" id="nombreClienteValoracion"
+                                            name="nombreClienteValoracion" rows="2" disabled></textarea>
                                     </div>
                                 </div>
-                                <div class="col-12 col-sm-4 d-flex flex-column align-items-center justify-content-center">
+                                <div
+                                    class="col-12 col-sm-4 d-flex flex-column align-items-center justify-content-center">
                                     <!-- Sección de valoración con estrellas -->
                                     <div class="row">
                                         <div class="col-4">
@@ -152,19 +152,21 @@
                                     <div class="mb-3">
                                         <label for="comentarioValoracion" class="form-label fw-semibold">Mensaje</label>
                                         <!-- Área de texto para el mensaje del comentario -->
-                                        <textarea class="form-control" id="comentarioValoracion" name="comentarioValoracion"
-                                            rows="4" disabled></textarea>
+                                        <textarea class="form-control" id="comentarioValoracion"
+                                            name="comentarioValoracion" rows="4" disabled></textarea>
                                     </div>
                                     <div class="form-check form-switch float-end mb-md-5">
                                         <label class="form-check-label" for="estadoValoracion">Estado</label>
-                                        <input class="form-check-input" type="checkbox"
-                                            role="switch" id="switchComentarios" name="estadoValoracion" checked >
+                                        <input class="form-check-input" type="checkbox" role="switch"
+                                            id="switchComentarios" name="estadoValoracion" checked>
                                     </div>
                                     <br>
                                     <!-- Botones de acción (Agregar, Ocultar) -->
                                     <div class="container text-center d-flex justify-content-center mt-2">
-                                        <button type="button" class="btn btn-orange-color text-white mx-2" data-bs-dismiss="modal" aria-label="Close">Regresar</button>
-                                        <button type="submit" data-bs-dismiss="modal" id="btnGuardar" name="btnGuardar" class="btn btn-red-color text-white">Actualizar estado</button>
+                                        <button type="button" class="btn btn-orange-color text-white mx-2"
+                                            data-bs-dismiss="modal" aria-label="Close">Regresar</button>
+                                        <button type="submit" data-bs-dismiss="modal" id="btnGuardar" name="btnGuardar"
+                                            class="btn btn-red-color text-white">Actualizar estado</button>
                                     </div>
                                     <br>
                                 </div>
