--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -114,9 +114,9 @@
                                 </div>
                                 <div class="col-sm-12 col-md-6">
                                     <p class="fs-8 btn-orange-color fw-bold"> Porcentaje</p>
-                                    <input type="number" min="1" max="100" class="form-control" placeholder="Escribe el porcentaje"
-                                        aria-label="porcentajeCupon" id="porcentajeCupon" name="porcentajeCupon"
-                                        required>
+                                    <input type="number" min="1" max="100" class="form-control"
+                                        placeholder="Escribe el porcentaje" aria-label="porcentajeCupon"
+                                        id="porcentajeCupon" name="porcentajeCupon" required>
                                 </div>
                             </div>
                             <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
@@ -124,8 +124,8 @@
                                 name="switch_ActualizarCuponN">
                                 <label class="form-check-label fw-bold" for="estadoCupon">Cupón
                                     habilitado</label>
-                                <input class="form-check-input" type="checkbox" role="switch"
-                                    id="estadoCupon" name="estadoCupon" checked>
+                                <input class="form-check-input" type="checkbox" role="switch" id="estadoCupon"
+                                    name="estadoCupon" checked>
                             </div>
                         </div>
                         <!-- Este botón servirá para enviar la información del formulario -->
@@ -133,7 +133,7 @@
                             <button type="submit" class="btn btn-orange-color text-light me-3">
                                 Guardar</button>
                         </div>
-                     </div>
+                </div>
                 </form>
             </div>
         </div>
