--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -115,8 +115,8 @@
                          todo el espacio disponible y sino se ordenen 2 inputs a la par-->
                                 <div class="col-sm-12 col-md-6">
                                     <div class="form-switch form-check" id="SwCrearUsuarios_AgregarPermisos">
-                                        <input class="form-check-input" type="checkbox" role="switch"
-                                            id="ver_cliente" name="ver_cliente" checked>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="ver_cliente"
+                                            name="ver_cliente" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             clientes</label>
                                     </div>
@@ -124,8 +124,8 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwEliminarUsuarios_AgregarPermisos">
-                                        <input class="form-check-input" type="checkbox" role="switch"
-                                            id="ver_marca" name="ver_marca" checked>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="ver_marca"
+                                            name="ver_marca" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             marcas</label>
                                     </div>
@@ -133,8 +133,8 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwCrearProductos_AgregarPermisos">
-                                        <input class="form-check-input" type="checkbox" role="switch"
-                                            id="ver_pedido" name="ver_pedido" checked>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="ver_pedido"
+                                            name="ver_pedido" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             pedidos</label>
                                     </div>
@@ -151,8 +151,8 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwBorrarComentario_AgregarPermisos">
-                                        <input class="form-check-input" type="checkbox" role="switch"
-                                            id="ver_producto" name="ver_producto" checked>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="ver_producto"
+                                            name="ver_producto" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             productos</label>
                                     </div>
@@ -160,8 +160,8 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwCrearCategorias_AgregarPermisos">
-                                        <input class="form-check-input" type="checkbox" role="switch"
-                                            id="ver_categoria" name="ver_categoria" checked>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="ver_categoria"
+                                            name="ver_categoria" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             categorías</label>
                                     </div>
@@ -169,8 +169,8 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwBorrarCategorias_AgregarPermisos">
-                                        <input class="form-check-input" type="checkbox" role="switch"
-                                            id="ver_cupon" name="ver_cupon" checked>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="ver_cupon"
+                                            name="ver_cupon" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             cupones</label>
                                     </div>
@@ -178,8 +178,8 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwGestionarCupones_AgregarPermisos">
-                                        <input class="form-check-input" type="checkbox" role="switch"
-                                            id="ver_permiso" name="ver_permiso" checked>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="ver_permiso"
+                                            name="ver_permiso" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             permisos</label>
                                     </div>
@@ -187,8 +187,8 @@
                                 <div class="col-sm-12 col-md-6">
                                     <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
                                     <div class="form-switch form-check" id="SwGestionarCupones_AgregarPermisos">
-                                        <input class="form-check-input" type="checkbox" role="switch"
-                                            id="ver_usuario" name="ver_usuario" checked>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="ver_usuario"
+                                            name="ver_usuario" checked>
                                         <label class="form-check-label" for="flexSwitchCheckChecked">Gestionar
                                             empleados</label>
                                     </div>
