--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-        
+
         <!-- Modal para agregar marca -->
         <div class="modal fade" id="saveModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
@@ -98,26 +98,28 @@
                             <div class="col">
                                 <div class="container d-flex align-items-center justify-content-center">
                                     <img class="rounded-1" id="imagen" src="../../resources/img/png/rectangulo.png"
-                                            width="183px" height="179px">
+                                        width="183px" height="179px">
                                 </div>
                                 <br>
                                 <div class="container text-center">
                                     <!-- Botón para cargar imagen -->
                                     <input type="file" class="form-control" id="imagenMarca" name="imagenMarca" hidden>
                                     <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
-                                    <label class="btn btn-red-color text-light btn-sm" for="imagenMarca">Cargar imagen</label>
+                                    <label class="btn btn-red-color text-light btn-sm" for="imagenMarca">Cargar
+                                        imagen</label>
                                 </div>
                             </div>
                             <!-- Sección para ingresar el nombre de la marca -->
                             <div class="row container d-flex align-items-center mt-4">
                                 <div class="col">
                                     <label for="nombreMarca" class="fs-8 btn-orange-color fw-semibold"> Nombre</label>
-                                    <input type="text" class="form-control" name="nombreMarca" placeholder="Escribe el nombre de la marca"
-                                        id="nombreMarca" required>
+                                    <input type="text" class="form-control" name="nombreMarca"
+                                        placeholder="Escribe el nombre de la marca" id="nombreMarca" required>
                                     <br>
                                     <div class="container text-center">
                                         <!-- Botón para agregar la marca -->
-                                        <button type="submit" id="modalButton" class="btn btn-orange-color text-white"></button>
+                                        <button type="submit" id="modalButton"
+                                            class="btn btn-orange-color text-white"></button>
                                     </div>
                                     <br>
                                 </div>
@@ -130,22 +132,22 @@
 
 
 
-    <!-- Framework Bootstrap - JS -->
-    <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Agregamos la libreria para alertas -->
-    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
-    <!--Agregamos la libreria para la paginacion -- jquery y js-->
-    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
-    <!-- Agregamos el controlador general de la aplicacion-->
-    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
-    <!-- Script personalizado -->
-    <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
-    <!-- Script funcionamiento -->
-    <script type="text/javascript" src="../../controllers/admin/marcas.js"></script>
-    <!-- Nos permite cambiar el idioma de la paginacion-->
-    <script type="text/javascript" src="../../controllers/utils/language_pagination.js"></script>
+        <!-- Framework Bootstrap - JS -->
+        <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Agregamos la libreria para alertas -->
+        <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+        <!--Agregamos la libreria para la paginacion -- jquery y js-->
+        <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+        <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+        <!-- Agregamos el controlador general de la aplicacion-->
+        <script type="text/javascript" src="../../controllers/utils/components.js"></script>
+        <!-- Script personalizado -->
+        <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
+        <!-- Script funcionamiento -->
+        <script type="text/javascript" src="../../controllers/admin/marcas.js"></script>
+        <!-- Nos permite cambiar el idioma de la paginacion-->
+        <script type="text/javascript" src="../../controllers/utils/language_pagination.js"></script>
 </body>
 
 </html>
