--- a/system_huellitas/views/admin/scrud_productos.html
+++ b/system_huellitas/views/admin/scrud_productos.html
@@ -136,13 +136,16 @@
                                         <div class="mb-3">
                                             <label for="nombreProducto" class="form-label fw-semibold">Nombre</label>
                                             <input type="text" class="form-control" id="nombreProducto"
-                                                name="nombreProducto" placeholder="Escribe el nombre del producto" required>
+                                                name="nombreProducto" placeholder="Escribe el nombre del producto"
+                                                required>
                                         </div>
                                         <div class="mb-3">
                                             <label for="descripcionProducto"
                                                 class="form-label fw-semibold">Descripción</label>
                                             <textarea class="form-control" id="descripcionProducto"
-                                                name="descripcionProducto" placeholder="Escribe la descripción del producto" rows="3" required></textarea>
+                                                name="descripcionProducto"
+                                                placeholder="Escribe la descripción del producto" rows="3"
+                                                required></textarea>
                                         </div>
                                         <div class="row">
                                             <div class="col">
@@ -150,7 +153,8 @@
                                                     <label for="precioProducto"
                                                         class="form-label fw-semibold">Precio</label>
                                                     <input type="number" min="0" step="any" class="form-control"
-                                                        id="precioProducto" placeholder="Escribe el precio del producto" name="precioProducto" required>
+                                                        id="precioProducto" placeholder="Escribe el precio del producto"
+                                                        name="precioProducto" required>
                                                 </div>
                                             </div>
                                             <div class="col">
@@ -158,7 +162,8 @@
                                                     <label for="cantidadProducto"
                                                         class="form-label fw-semibold">Cantidad</label>
                                                     <input type="number" class="form-control" id="cantidadProducto"
-                                                        name="existenciaProducto" placeholder="Escribe la existencia de este producto" required>
+                                                        name="existenciaProducto"
+                                                        placeholder="Escribe la existencia de este producto" required>
                                                 </div>
                                             </div>
                                         </div>
@@ -208,71 +213,71 @@
             </div>
         </div>
 
-            <!-- Informacion producto -->
-            <div class="modal fade" id="infoModal" tabindex="-1" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered modal-md modal-dialog-scrollable">
-                    <div class="modal-content">
-                        <div class="modal-header bg-orange-color">
-                            <div class="container text-center text-light">
-                                <h1 class="modal-title fs-5 text-center fw-bold" id="titleModalInfo"></h1>
+        <!-- Informacion producto -->
+        <div class="modal fade" id="infoModal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-md modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header bg-orange-color">
+                        <div class="container text-center text-light">
+                            <h1 class="modal-title fs-5 text-center fw-bold" id="titleModalInfo"></h1>
+                        </div>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="seeForms">
+                            <!-- Fila 1 -->
+                            <div class="container text-center">
+                                <div class="row align-items-center justify-content-center  gy-3">
+                                    <div class="col-sm-12 col-md-auto">
+                                        <img class="rounded-1" id="imagenInfo"
+                                            src="../../resources/img/png/rectangulo.png" width="150px" height="150px">
+                                    </div>
+                                </div>
                             </div>
-                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form id="seeForms">
-                                <!-- Fila 1 -->
-                                <div class="container text-center">
-                                    <div class="row align-items-center justify-content-center  gy-3">
-                                        <div class="col-sm-12 col-md-auto">
-                                            <img class="rounded-1" id="imagenInfo"
-                                                src="../../resources/img/png/rectangulo.png" width="150px" height="150px">
+                            <!-- Fila 2 -->
+                            <div class="container mt-4">
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-6 col-lg-6">
+                                        <div class="mb-3">
+                                            <label class="form-label fw-semibold mb-0">Nombre</label>
+                                            <p id="nombre">Bola giratoria - Juguetes de gato</p>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label fw-semibold mb-0">Descripción</label>
+                                            <p id="descripcion">Pelotas de plástico de diferentes colores</p>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label fw-semibold mb-0">Mascota</label>
+                                            <p id="tipo_mascota">Gatos</p>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label fw-semibold mb-0">Categoría</label>
+                                            <p id="categoria">Entretenimiento</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-12 col-md-6 col-lg-6">
+                                        <div class="mb-3">
+                                            <label class="form-label fw-semibold mb-0">Precio</label>
+                                            <p id="precio">Entretenimiento</p>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label fw-semibold mb-0">Cantidad</label>
+                                            <p id="cantidad">$20.50</p>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label fw-semibold mb-0">Marca</label>
+                                            <p id="marca">MIMI</p>
                                         </div>
                                     </div>
                                 </div>
-                                <!-- Fila 2 -->
-                                <div class="container mt-4">
-                                    <div class="row">
-                                        <div class="col-sm-12 col-md-6 col-lg-6">
-                                            <div class="mb-3">
-                                                <label class="form-label fw-semibold mb-0">Nombre</label>
-                                                <p id="nombre">Bola giratoria - Juguetes de gato</p>
-                                            </div>
-                                            <div class="mb-3">
-                                                <label class="form-label fw-semibold mb-0">Descripción</label>
-                                                <p id="descripcion">Pelotas de plástico de diferentes colores</p>
-                                            </div>
-                                            <div class="mb-3">
-                                                <label class="form-label fw-semibold mb-0">Mascota</label>
-                                                <p id="tipo_mascota">Gatos</p>
-                                            </div>
-                                            <div class="mb-3">
-                                                <label class="form-label fw-semibold mb-0">Categoría</label>
-                                                <p id="categoria">Entretenimiento</p>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-12 col-md-6 col-lg-6">
-                                            <div class="mb-3">
-                                                <label class="form-label fw-semibold mb-0">Precio</label>
-                                                <p id="precio">Entretenimiento</p>
-                                            </div>
-                                            <div class="mb-3">
-                                                <label class="form-label fw-semibold mb-0">Cantidad</label>
-                                                <p id="cantidad">$20.50</p>
-                                            </div>
-                                            <div class="mb-3">
-                                                <label class="form-label fw-semibold mb-0">Marca</label>
-                                                <p id="marca">MIMI</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
-            
+        </div>
+
 
     </main>
     <!-- Agregamos el framework de boostrap - js -->
