--- a/system_huellitas/views/admin/settings.html
+++ b/system_huellitas/views/admin/settings.html
@@ -37,7 +37,8 @@
                     <div class="container-fluid p-4 mt-5">
                         <input type="hidden" id="idAdministrador" name="idAdministrador">
                         <div class="d-flex">
-                            <img src="../../resources/img/svg/settings.svg" class="custom-margin-right imagen_logo" alt="">
+                            <img src="../../resources/img/svg/settings.svg" class="custom-margin-right imagen_logo"
+                                alt="">
                             <h2 class="mt-2"><strong>Ajustes</strong></h2>
                             <div class="row"></div>
                             <h1 class="fw-bold text-light" id="greetings" hidden></h1>
@@ -47,7 +48,8 @@
                         <!-- Contenido de la sección de ajustes -->
                         <div class="container d-flex align-items-center justify-content-center">
                             <!-- Imagen del perfil -->
-                            <img class="picture rounded-circle" src="../../resources/img/png/rectangulo.png" id="imagen" width="180px" height="170px">
+                            <img class="picture rounded-circle" src="../../resources/img/png/rectangulo.png" id="imagen"
+                                width="180px" height="170px">
                         </div>
                         <br>
                         <div class="container text-center">
@@ -60,9 +62,11 @@
                             <br>
                             <!-- Campos para nombre, apellido, correo, alias y contraseña -->
                             <div class="mb-3 row container d-flex align-items-center justify-content-center">
-                                <label for="nombreAdmin" class="col-sm-1 col-form-label texto_input"><strong>Nombre</strong></label>
+                                <label for="nombreAdmin"
+                                    class="col-sm-1 col-form-label texto_input"><strong>Nombre</strong></label>
                                 <div class="col-sm-6">
-                                    <input class="form-control input-sm tamanio_input bg-grey" type="text" name="nombreAdmin" id="adminName" required>
+                                    <input class="form-control input-sm tamanio_input bg-grey" type="text"
+                                        name="nombreAdmin" id="adminName" required>
                                 </div>
                             </div>
                             <br>
@@ -70,8 +74,8 @@
                                 <label for="apellidoAdmin"
                                     class="col-sm-1 col-form-label texto_input"><strong>Apellido</strong></label>
                                 <div class="col-sm-6">
-                                    <input class="form-control tamanio_input bg-grey" type="text"
-                                        name="apellidoAdmin" id="adminApellido" required>
+                                    <input class="form-control tamanio_input bg-grey" type="text" name="apellidoAdmin"
+                                        id="adminApellido" required>
                                 </div>
                             </div>
                             <br>
@@ -79,8 +83,8 @@
                                 <label for="AdminEmail"
                                     class="col-sm-1 col-form-label texto_input"><strong>Correo</strong></label>
                                 <div class="col-sm-6">
-                                    <input class="form-control tamanio_input bg-grey" type="email"
-                                        name="correoAdmin" id="AdminEmail" required>
+                                    <input class="form-control tamanio_input bg-grey" type="email" name="correoAdmin"
+                                        id="AdminEmail" required>
                                 </div>
                             </div>
                             <br>
@@ -88,8 +92,8 @@
                                 <label for="AdminAlias" class="col-sm-1 col-form-label texto_input"><strong>Alias
                                         del usuario</strong></label>
                                 <div class="col-sm-6">
-                                    <input class="form-control tamanio_input bg-grey" type="text"
-                                        name="aliasAdmin" id="AdminAlias" readonly required>
+                                    <input class="form-control tamanio_input bg-grey" type="text" name="aliasAdmin"
+                                        id="AdminAlias" readonly required>
                                 </div>
                             </div>
                             <div class="text-center p-3">
@@ -100,12 +104,13 @@
                             <!--.............-->
                             <!-- Botón para guardar cambios -->
                             <div class="container py-5">
-                                <button type="submit" class="btn btn-orange-color text-white boton_guardar">Guardar</button>
+                                <button type="submit"
+                                    class="btn btn-orange-color text-white boton_guardar">Guardar</button>
                             </div>
                         </div>
                         <br>
                     </div>
-                </form>      
+                </form>
             </div>
         </div>
         <!-- Componente Modal para mostrar el formulario de cambio de contraseña -->
