--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -114,7 +114,7 @@
                                 <div class="col">
                                     <label for="nombreMarca" class="fs-8 btn-orange-color fw-semibold"> Nombre</label>
                                     <input type="text" class="form-control" name="nombreMarca"
-                                        placeholder="Escribe el nombre de la marca" id="nombreMarca" required>
+                                        placeholder="Escribe el nombre de la marca" id="nombreMarca" maxlength="100" required>
                                     <br>
                                     <div class="container text-center">
                                         <!-- Botón para agregar la marca -->
