--- a/system_huellitas/views/admin/scrud_productos.html
+++ b/system_huellitas/views/admin/scrud_productos.html
@@ -136,25 +136,26 @@
                                         <div class="mb-3">
                                             <label for="nombreProducto" class="form-label fw-semibold">Nombre</label>
                                             <input type="text" class="form-control" id="nombreProducto"
-                                                name="nombreProducto" placeholder="Escribe el nombre del producto"
+                                                name="nombreProducto" placeholder="Escribe el nombre del producto" maxlength="50"
                                                 required>
                                         </div>
                                         <div class="mb-3">
                                             <label for="descripcionProducto"
                                                 class="form-label fw-semibold">Descripción</label>
                                             <textarea class="form-control" id="descripcionProducto"
-                                                name="descripcionProducto"
+                                                name="descripcionProducto" maxlength="250"
                                                 placeholder="Escribe la descripción del producto" rows="3"
                                                 required></textarea>
                                         </div>
                                         <div class="row">
                                             <div class="col">
-                                                <div class="mb-3">
-                                                    <label for="precioProducto"
-                                                        class="form-label fw-semibold">Precio</label>
-                                                    <input type="number" min="0" step="any" class="form-control"
-                                                        id="precioProducto" placeholder="Escribe el precio del producto"
-                                                        name="precioProducto" required>
+                                                <label for="precioProducto"
+                                                       class="form-label fw-semibold">Precio</label>
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">$</span>
+                                                    <input type="number" min="1.00" step="0.01" class="form-control"
+                                                           id="precioProducto" placeholder="Precio"
+                                                           name="precioProducto" required>
                                                 </div>
                                             </div>
                                             <div class="col">
@@ -162,8 +163,8 @@
                                                     <label for="cantidadProducto"
                                                         class="form-label fw-semibold">Cantidad</label>
                                                     <input type="number" class="form-control" id="cantidadProducto"
-                                                        name="existenciaProducto"
-                                                        placeholder="Escribe la existencia de este producto" required>
+                                                        name="existenciaProducto" min="1"
+                                                        placeholder="Cantidad" required>
                                                 </div>
                                             </div>
                                         </div>
