Correciones agregadas 90%, solo faltarías lo de los mensajes de error más detallados.

--- a/system_huellitas/views/admin/scrud_productos.html
+++ b/system_huellitas/views/admin/scrud_productos.html
@@ -163,10 +163,17 @@
                                                     <label for="cantidadProducto"
                                                         class="form-label fw-semibold">Cantidad</label>
                                                     <input type="number" class="form-control" id="cantidadProducto"
-                                                        name="existenciaProducto" min="1"
+                                                         min="1"
                                                         placeholder="Cantidad" required>
                                                 </div>
                                             </div>
+                                        </div>
+                                        <div class="mb-3 d-none" id="existencias">
+                                            <label for="cantidadProducto"
+                                                   class="form-label fw-semibold">Agregar existencias</label>
+                                            <input type="number" class="form-control" id="agregarCant"
+                                                   name="agregaCantidad" min="1"
+                                                   placeholder="Agrega la cantidad que desees agregar">
                                         </div>
                                     </div>
                                     <div class="col-sm-12 col-md-6 col-lg-6">
