--- a/system_huellitas/views/admin/dashboard.html
+++ b/system_huellitas/views/admin/dashboard.html
@@ -105,7 +105,7 @@
                     <div class="col">
                         <div class="row p-4 d-flex justify-content-center align-items-center">
                             <div class="d-flex justify-content-center align-items-center">
-                                <img class="picture rounded-circle" src="../../resources/img/png/picture.png"
+                                <img class="picture rounded-circle" src=""
                                     id="adminImg">
                             </div>
                             <div class="d-flex justify-content-center align-items-center mt-3">
